--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.health-insurance</groupId>
-  <artifactId>PHM-Cases</artifactId>
+  <artifactId>PHM-Processes</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>kjar</packaging>
-  <name>PHM-Cases</name>
+  <name>PHM-Processes</name>
   <description></description>
   <dependencies>
     <dependency>
