--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,7 @@
   <version>1.0.0</version>
   <packaging>kjar</packaging>
   <name>PHM-Processes</name>
-  <description>
-      Population Health Management
-  </description>
+  <description>Population Health Management</description>
   <properties>
     <version.org.kie>7.18.0.Final-redhat-00004</version.org.kie>
   </properties>
