--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,10 @@
   <name>PHM-Processes</name>
   <description>Population Health Management</description>
   <properties>
-    <version.org.kie>7.23.0.Final-redhat-00003</version.org.kie>
+    <!-- RHPAM 7.4.1 -->
+    <!-- version.org.kie>7.23.0.Final-redhat-00003</version.org.kie -->
+    <!-- RHPAM 7.5.0 -->
+    <version.org.kie>7.26.0.Final-redhat-00005</version.org.kie>
   </properties>
   <dependencies>
     <dependency>
