--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
     <!-- RHPAM 7.4.1 -->
     <!-- version.org.kie>7.23.0.Final-redhat-00003</version.org.kie -->
     <!-- RHPAM 7.5.0 -->
-    <version.org.kie>7.26.0.Final-redhat-00005</version.org.kie>
+    <!--version.org.kie>7.26.0.Final-redhat-00005</version.org.kie-->
+    <version.org.kie>7.29.0.Final</version.org.kie>
   </properties>
   <dependencies>
     <dependency>
