--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,12 @@
   <description>Population Health Management</description>
   <url>https://maucarba.blogspot.com/2019/12/process-management-or-case-management.html</url>
   <properties>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-    <version.org.kie>7.30.0.Final</version.org.kie>
+    <!-- RHPAM 7.4.1 -->
+    <!--version.org.kie>7.23.0.Final-redhat-00003</version.org.kie-->
+    <!-- RHPAM 7.5.0 -->
+    <!--version.org.kie>7.26.0.Final-redhat-00005</version.org.kie-->
+    <!-- RHPAM 7.5.1 -->
+    <version.org.kie>7.26.0.Final-redhat-00006</version.org.kie>
   </properties>
   <dependencies>
     <dependency>
