--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,11 @@
     <!-- RHPAM 7.5.0 -->
     <!--version.org.kie>7.26.0.Final-redhat-00005</version.org.kie-->
     <!-- RHPAM 7.5.1 -->
-    <version.org.kie>7.26.0.Final-redhat-00006</version.org.kie>
+    <!--version.org.kie>7.26.0.Final-redhat-00006</version.org.kie-->
+    <!-- RHPAM 7.6.0 -->
+    <!--version.org.kie>7.30.0.Final-redhat-00003</version.org.kie-->
+    <!-- RHPAM 7.7.0 -->
+    <version.org.kie>7.33.0.Final-redhat-00002</version.org.kie>
   </properties>
   <dependencies>
     <dependency>
