--- a/pom.xml
+++ b/pom.xml
@@ -10,22 +10,13 @@
   <description>Population Health Management</description>
   <url>https://maucarba.blogspot.com/2020/01/designing-event-driven-business-process.html</url>
   <properties>
-    <!-- RHPAM 7.4.1 -->
-    <!--version.org.kie>7.23.0.Final-redhat-00003</version.org.kie-->
-    <!-- RHPAM 7.5.0 -->
-    <!--version.org.kie>7.26.0.Final-redhat-00005</version.org.kie-->
-    <!-- RHPAM 7.5.1 -->
-    <!--version.org.kie>7.26.0.Final-redhat-00006</version.org.kie-->
-    <!-- RHPAM 7.6.0 -->
-    <!--version.org.kie>7.30.0.Final-redhat-00003</version.org.kie-->
-    <!-- RHPAM 7.7.0 -->
     <version.org.kie>7.33.0.Final-redhat-00002</version.org.kie>
   </properties>
   <dependencies>
     <dependency>
       <groupId>com.health-insurance</groupId>
       <artifactId>PHM-Model</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>DEMOJAM20-1.0.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
