--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,37 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.health-insurance</groupId>
   <artifactId>PHM-Processes</artifactId>
-  <version>1.0.0</version>
+  <version>2.1.0-SNAPSHOT</version>
   <packaging>kjar</packaging>
   <name>PHM-Processes</name>
   <description>Population Health Management</description>
-  <url>https://maucarba.blogspot.com/2020/01/designing-event-driven-business-process.html</url>
+  <url>https://developers.redhat.com/blog/2020/02/19/designing-an-event-driven-business-process-at-scale-a-health-management-example-part-1/</url>
   <properties>
-    <maven.compiler.source>11</maven.compiler.source>
+    <version.jackson>2.11.2</version.jackson>
     <maven.compiler.target>11</maven.compiler.target>
-    <version.org.kie>7.33.0.Final</version.org.kie>
+    <maven.compiler.source>11</maven.compiler.source>
+    <version.org.kie>7.43.1.Final</version.org.kie>
   </properties>
   <dependencies>
     <dependency>
       <groupId>com.health-insurance</groupId>
       <artifactId>PHM-Model</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>2.9.5</version>
+      <version>${version.jackson}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.9.5</version>
+      <version>${version.jackson}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
