--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.health-insurance</groupId>
   <artifactId>PHM-Processes</artifactId>
-  <version>2.1.0-SNAPSHOT</version>
+  <version>2.1.0</version>
   <packaging>kjar</packaging>
   <name>PHM-Processes</name>
   <description>Population Health Management</description>
